--- a/src/util/hass-util.html
+++ b/src/util/hass-util.html
@@ -16,6 +16,7 @@ window.hassUtil.DOMAINS_WITH_CARD = [
   'configurator',
   'input_select',
   'input_slider',
+  'light',
   'media_player',
   'scene',
   'script',
@@ -29,6 +30,8 @@ window.hassUtil.DOMAINS_WITH_MORE_INFO = [
 ];
 
 window.hassUtil.DOMAINS_WITH_NO_HISTORY = ['camera', 'configurator', 'scene'];
+
+window.hassUtil.DOMAINS_SUPPORT_TOGGLE = ['light'];
 
 window.hassUtil.HIDE_MORE_INFO = [
   'input_select', 'scene', 'script', 'input_slider',
@@ -181,7 +184,9 @@ window.hassUtil.relativeTime.tests = [
 window.hassUtil.stateCardType = function (hass, state) {
   if (state.state === 'unavailable') {
     return 'display';
-  } else if (window.hassUtil.DOMAINS_WITH_CARD.indexOf(state.domain) !== -1) {
+  } else if (window.hassUtil.DOMAINS_WITH_CARD.indexOf(state.domain) !== -1 &&
+             (window.hassUtil.DOMAINS_SUPPORT_TOGGLE.indexOf(state.domain) === -1 ||
+              !state.attributes.toggle_ui)) {
     return state.domain;
   } else if (window.hassUtil.canToggle(hass, state.entityId) && state.attributes.control !== 'hidden') {
     return 'toggle';
